Prevent text from wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -71,7 +71,7 @@ body > main > nav > ul > button {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   gap: 8px;
+   gap: 16px;
 }
 
 body > main > nav > ul .project:hover {
@@ -90,6 +90,7 @@ body > main > nav > ul input.project.selected {
 body > main > nav > ul button.project.selected::after {
    opacity: 0%;
    content: "Edit title";
+   white-space: nowrap;
    font-size: 60%;
    transition: opacity 150ms;
 }
@@ -128,4 +129,5 @@ body > main > ul.tasks > * {
    padding: var(--task-padding);
    border-radius: 24px;
    overflow: auto;
+   white-space: nowrap;
 }
